--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
       </span>
     </p>
     <ul>
-      <li>Research and implementation of new methods in academic/working literature, which have the potential to enhance Antarctica's abilities to<br>identify Funds with attractive risk/return profiles and/or greater fund risk management.</li>
+      <li>Research and implement new methods in academic/working literature, which have the potential to enhance Antarctica's abilities to<br>
+        identify Funds with attractive risk/return profiles and/or greater fund risk management.</li>
       <li>Qualitative and quantitative assessment of underlying hedge fund positions and overall strategies to contribute to FoF investment decisions.</li>
       <li>Build and maintain quantitative analytical tools for fund analysis and risk management.</li>
-      <li>Collection, parsing and analysis of of market and fund related data onto the Antarctica Hub.</li>
+      <li>Collect, analyse and parse market and fund related data onto the Antarctica Hub.</li>
     </ul>
 
     <p style="text-align:left;">
@@ -81,7 +82,7 @@
     <h2><strong>Programming</strong></h2>
     <hr color="black">
     <strong>Languages:</strong> Python, VBA, HTML & C++.
-    <strong>Libraries:</strong> NumPy, Pandas, Matplotlib, python_copulas, tabula...
+    <br><strong>Libraries:</strong> NumPy, Pandas, Matplotlib, python_copulas, tabula...
     <br><strong>Projects:</strong>
     <ul>
       <li><p>
