minor updates to index

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <li><p style="text-align:left;"><strong>French evening classes:</strong> I am currently taking weekly night classes at UCL to improve my knowledge of the French language.
       <span style="float:right;"><em>2020-Present</em></span>
       </p></li>
-      <li><p style="text-align:left;"><strong>Alumni Mentor:</strong> Provide advie concerning applications and post-vinversity careers to my mentee.
+      <li><p style="text-align:left;"><strong>Alumni Mentor:</strong> Provide advice concerning applications and post-university careers to my mentee.
       <span style="float:right;"><em>2020-Present</em></span>
       </p></li>
     </ul>
