--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </p>
     <ul>
       <li>Research and implement new methods in academic/working literature, which have the potential to enhance Antarctica's abilities to<br>
-        identify Funds with attractive risk/return profiles and/or greater fund risk management.</li>
+        identify funds with attractive risk/return profiles and/or greater fund risk management.</li>
       <li>Qualitative and quantitative assessment of underlying hedge fund positions and overall strategies to contribute to FoF investment decisions.</li>
       <li>Build and maintain quantitative analytical tools for fund analysis and risk management.</li>
       <li>Collect, analyse and parse market and fund related data onto the Antarctica Hub.</li>
@@ -60,8 +60,8 @@
     <a href="https://www.lse.ac.uk/resources/calendar2021-2022/programmeRegulations/undergraduate/2017/BScFinancialMathematicsAndStatistics.htm"><em>BSc Financial Mathematics & Statistics</em></a>
     <ul>
       <li>Degree Result: First Class Honours, <strong>77.3%</strong> Average.</li>
-      <li>Relevant Modules: Quantitative Finance, Compuational Methods in Financial Mathematics, Artifical Intelligence & Deep Learning (Audited)<br>
-        Furter Mathematical Methods, Regression and GLMS, Financial Statistics.
+      <li>Relevant Modules: Quantitative Finance, Compuational Methods in Financial Mathematics, Artificial Intelligence & Deep Learning (Audited)<br>
+        Further Mathematical Methods, Regression and GLMS, Financial Statistics.
       </li>
       <li><a href="res/Official Undergradate Transcript.pdf">Transcript</a></li>
     </ul>
@@ -73,7 +73,7 @@
       </span>
     </p>
     <ul>
-      <li>A levels: Mathematics <em>(A*)</em>, Further Mathematics <em>(A*)</em>, Biology <em>(A*)</em> & Chemistry <em>(A)</em>.</li>
+      <li>A levels: Mathematics <strong>(A*)</strong>, Further Mathematics <strong>(A*)</strong>, Biology <strong>(A*)</strong> & Chemistry <strong>(A)</strong>.</li>
       <li>Award of outstanding achievement in Mathematics</li>
       <li>Recipient of the Governor's Award for obtaining the second highest grades out of 250 peers.</li>
       <li><a href="res/A level transcript.pdf">Transcript</a></li>
@@ -87,7 +87,7 @@
     <ul>
       <li><p>
         <span style="float:left;">
-        <strong>Creation and maintance of a copula library in python:</strong>
+        <strong>Creation and maintance of a copula library in Python:</strong>
         </span>
         <span style="float:right;">
           <em>2021-Present</em>
@@ -118,7 +118,7 @@
           <em>2019-2020</em>
         </span>
         <br><span style="float:left;">
-          Worked with a Quantitative Hedge Fund to research and develop neural networks designed for accurate pricing and risk management of equity and
+          Worked with a quantitative hedge fund to research and develop neural networks designed for accurate pricing and risk management of equity and
           <br>FX derivative portfolios, specifically, Barrier and Multi-Asset options.
         </span>
       </p></li>
@@ -140,7 +140,7 @@
     <hr color="black">
 
     <ul>
-      <li><p style="text-align:left;"><strong>The Smithsonian Museam:</strong> As a regular volunteer, I digitally transcribe letters and records relating to African American History and Slavery.
+      <li><p style="text-align:left;"><strong>The Smithsonian Museam:</strong> As a regular volunteer, I digitally transcribe letters and records relating to African American history and slavery.
       <span style="float:right;"><em>2020-Present</em></span>
       </p></li>
       <li><p style="text-align:left;"><strong>French evening classes:</strong> I am currently taking weekly night classes at UCL to improve my knowledge of the French language.
